workspace/log/build_2024-07-04_22-43-31/ps5_controller/stderr.log
  File "/home/mobot/ROS2/workspace/install/ps5_controller/lib/python3.12/site-packages/ps5_controller/ps5_publisher_node.py", line 4
    from dualsense-controller import DualSenseController
                  ^
SyntaxError: invalid syntax

